--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-Flask==3.0.3
-requests==2.32.3
-gspread==6.1.2
-google-auth==2.33.0
-gunicorn==22.0.0
+flask
+requests
+gspread
+google-auth
+python-dotenv
+gunicorn
